third_party/WebKit/Source/WebCore/svg/SVGTRefElement.h
@@ -28,12 +28,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+class SubtreeModificationEventListener;
+
 class SVGTRefElement : public SVGTextPositioningElement,
                        public SVGURIReference {
 public:
     static PassRefPtr<SVGTRefElement> create(const QualifiedName&, Document*);
 
 private:
+    friend class SubtreeModificationEventListener;
+
     SVGTRefElement(const QualifiedName&, Document*);
 
     bool isSupportedAttribute(const QualifiedName&);
@@ -47,12 +51,18 @@ private:
     virtual bool childShouldCreateRenderer(Node*) const;
     virtual bool rendererIsNeeded(const NodeRenderingContext&);
 
+    virtual void removedFromDocument();
+
     void updateReferencedText();
+
+    virtual void buildPendingResource();
 
     // Animated property declarations
 
     // SVGURIReference
     DECLARE_ANIMATED_STRING(Href, href)
+
+    RefPtr<SubtreeModificationEventListener> m_eventListener;
 };
 
 } // namespace WebCore
